--- a/components/nds-column-list/package.json
+++ b/components/nds-column-list/package.json
@@ -12,6 +12,14 @@
     "scss",
     "*.d.ts"
   ],
+  "publishConfig": {
+		"registry": "https://registry.npmjs.org/",
+		"access": "public"
+	},
+  "repository": {
+		"type": "git",
+		"url": "git+https://github.com/nice-digital/nice-design-system.git"
+	},
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
@@ -23,8 +31,10 @@
     "list"
   ],
   "author": "Chris Barker <chris.barker@nice.org.uk>",
+  "homepage": "https://design-system.nice.org.uk/",
   "license": "MIT",
   "dependencies": {
     "prop-types": "^15.8.1"
-  }
+  },
+  "gitHead": "e33b39c96bdba7d3c4bf1e74d4101395ccd4f6e6"
 }
