--- a/components/design-system/package.json
+++ b/components/design-system/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nice-digital/design-system",
-  "version": "1.2.32",
+  "version": "1.3.1-alpha.0",
   "description": "Your source for quickly creating consistent on-brand NICE digital services",
   "author": "Ian Routledge <ian.routledge@nice.org.uk>",
   "homepage": "https://design-system.nice.org.uk/",
@@ -40,6 +40,7 @@
     "@nice-digital/nds-callout": "^1.1.14",
     "@nice-digital/nds-card": "^1.2.15",
     "@nice-digital/nds-checkbox": "^1.2.12",
+    "@nice-digital/nds-column-list": "^1.0.2-alpha.0",
     "@nice-digital/nds-container": "^1.0.8",
     "@nice-digital/nds-core": "^1.2.12",
     "@nice-digital/nds-enhanced-pagination": "^1.0.6",
@@ -67,5 +68,5 @@
     "normalize.css": "8.0.1",
     "react": "^16.11.0"
   },
-  "gitHead": "b70a1e39df19c1943a000c841aca8d9bb3ef4ff1"
+  "gitHead": "e33b39c96bdba7d3c4bf1e74d4101395ccd4f6e6"
 }
