--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -2,13 +2,13 @@
 	"name": "@nice-digital/design-system-documentation",
 	"private": true,
 	"description": "Documentation for the NICE Design System",
-	"version": "1.3.1-alpha.0",
+	"version": "1.4.0",
 	"author": "Warren Keith <warren.keith@nice.org.uk>",
 	"keywords": [
 		"gatsby"
 	],
 	"dependencies": {
-		"@nice-digital/design-system": "^1.3.1-alpha.0",
+		"@nice-digital/design-system": "^1.4.0",
 		"@nice-digital/icons": "^2.2.7",
 		"@nice-digital/nds-action-banner": "^1.2.14",
 		"@nice-digital/nds-alert": "^1.2.12",
@@ -17,7 +17,7 @@
 		"@nice-digital/nds-callout": "^1.1.14",
 		"@nice-digital/nds-card": "^1.2.15",
 		"@nice-digital/nds-checkbox": "^1.2.12",
-		"@nice-digital/nds-column-list": "^1.0.2-alpha.0",
+		"@nice-digital/nds-column-list": "^1.1.0",
 		"@nice-digital/nds-container": "^1.0.8",
 		"@nice-digital/nds-core": "^1.2.12",
 		"@nice-digital/nds-enhanced-pagination": "^1.0.6",
