NDS-218 Added Alphabet component to dev app

--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -12,6 +12,7 @@
 		"@nice-digital/icons": "^2.2.7",
 		"@nice-digital/nds-action-banner": "^1.2.14",
 		"@nice-digital/nds-alert": "^1.2.12",
+		"@nice-digital/nds-alphabet": "^0.1.0",
 		"@nice-digital/nds-breadcrumbs": "^1.2.14",
 		"@nice-digital/nds-button": "^1.2.12",
 		"@nice-digital/nds-callout": "^1.1.14",
