--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -1,6 +1,6 @@
 {
   "name": "storybook",
-  "version": "1.4.0",
+  "version": "1.5.0-alpha.0",
   "private": true,
   "description": "> TODO: description",
   "author": "Warren Keith <warren.keith@nice.org.uk>",
@@ -19,16 +19,16 @@
     "url": "git+https://github.com/nice-digital/nice-design-system.git"
   },
   "dependencies": {
-    "@nice-digital/design-system": "^1.4.0",
+    "@nice-digital/design-system": "^1.5.0-alpha.0",
     "@nice-digital/nds-action-banner": "^1.2.14",
     "@nice-digital/nds-alert": "^1.2.12",
-    "@nice-digital/nds-alphabet": "^0.1.0",
+    "@nice-digital/nds-alphabet": "^0.2.0-alpha.0",
     "@nice-digital/nds-breadcrumbs": "^1.2.14",
     "@nice-digital/nds-button": "^1.2.12",
     "@nice-digital/nds-callout": "^1.1.14",
     "@nice-digital/nds-card": "^1.2.15",
     "@nice-digital/nds-checkbox": "^1.2.12",
-    "@nice-digital/nds-column-list": "^1.1.0",
+    "@nice-digital/nds-column-list": "^1.2.0-alpha.0",
     "@nice-digital/nds-container": "^1.0.8",
     "@nice-digital/nds-core": "^1.2.12",
     "@nice-digital/nds-enhanced-pagination": "^1.0.6",
