NDS-218 Export type defs; update component keywords

--- a/components/nds-alphabet/package.json
+++ b/components/nds-alphabet/package.json
@@ -27,8 +27,8 @@
     "url": "https://github.com/nice-digital/nice-design-system/issues"
   },
   "keywords": [
-    "column",
-    "list"
+    "alphabet",
+    "a to z"
   ],
   "author": "Chris Barker <chris.barker@nice.org.uk>",
   "homepage": "https://design-system.nice.org.uk/",
