--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -10,6 +10,7 @@
 	"dependencies": {
 		"@nice-digital/design-system": "^1.4.0",
 		"@nice-digital/icons": "^2.2.7",
+		"@nice-digital/nds-a-z-list": "^0.1.0",
 		"@nice-digital/nds-action-banner": "^1.2.14",
 		"@nice-digital/nds-alert": "^1.2.12",
 		"@nice-digital/nds-breadcrumbs": "^1.2.14",
