--- a/components/nds-a-z-list/package.json
+++ b/components/nds-a-z-list/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nice-digital/nds-a-z-list",
-  "version": "0.1.0",
+  "version": "0.2.0-alpha.0",
   "description": "A to Z list component for the NICE Design System",
   "main": "lib/AZList.js",
   "module": "es/AZList.js",
