NDS-215 A to Z List (#252)
* NDS-218 WIP Alphabet component

* NDS-218 Added story for custom link type

* NDS-218 Fix regression errors with Column List

* NDS-218 Add unit tests to Alphabet component

* NDS-218 Added Alphabet component to dev app

* NDS-218 Add Alphabet component documentation

* Publish

 - @nice-digital/design-system@1.5.0-alpha.0
 - @nice-digital/nds-alphabet@0.2.0-alpha.0
 - @nice-digital/nds-column-list@1.2.0-alpha.0
 - dev-app@1.3.0-alpha.0
 - @nice-digital/design-system-documentation@1.5.0-alpha.0
 - storybook@1.5.0-alpha.0

* NDS-218 Add new components to kitchen sink stylesheet

* NDS-215 WIP Scaffold A to Z list component

* NDS-218 Export type defs; update component keywords

* NDS-215 Scaffold more of the NDS A-Z List component

* NDS-218 Add component README

* NDS-215 WIP A-Z List styling & stories

* NDS-215 Add A-Z list unit tests

* NDS-215 Add A-Z README

* Publish

 - @nice-digital/design-system@1.6.0-alpha.0
 - @nice-digital/nds-a-z-list@0.2.0-alpha.0
 - @nice-digital/nds-alphabet@0.3.0-alpha.0
 - @nice-digital/nds-checkbox@1.3.0-alpha.0
 - @nice-digital/nds-column-list@1.3.0-alpha.0
 - dev-app@1.4.0-alpha.0
 - @nice-digital/design-system-documentation@1.6.0-alpha.0
 - storybook@1.6.0-alpha.0

* NDS-215 Add A-Z list as design system dependency

* Publish

 - @nice-digital/design-system@1.6.1-alpha.0
 - dev-app@1.4.1-alpha.0
 - @nice-digital/design-system-documentation@1.6.1-alpha.0
 - storybook@1.6.1-alpha.0

* NDS-215 Fix issues with A-Z typedef; update Alphabet component with custom class

* Publish

 - @nice-digital/design-system@1.6.2-alpha.0
 - @nice-digital/nds-a-z-list@0.2.1-alpha.0
 - @nice-digital/nds-alphabet@0.3.1-alpha.0
 - dev-app@1.4.2-alpha.0
 - @nice-digital/design-system-documentation@1.6.2-alpha.0
 - storybook@1.6.2-alpha.0

* NDS-215 Fix reference to A-Z list component in its README

Co-authored-by: Chris Barker <chris.barker@nice.org.uk>

--- a/components/nds-alphabet/package.json
+++ b/components/nds-alphabet/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@nice-digital/nds-column-list",
-  "version": "1.3.0-alpha.0",
-  "description": "Column List component for the NICE Design System",
-  "main": "lib/ColumnList.js",
-  "module": "es/ColumnList.js",
-  "style": "scss/column-list.js",
-  "types": "nds-column-list.d.ts",
+  "name": "@nice-digital/nds-alphabet",
+  "version": "0.3.1-alpha.0",
+  "description": "Alphabet component for the NICE Design System",
+  "main": "lib/Alphabet.js",
+  "module": "es/Alphabet.js",
+  "style": "scss/alphabet.js",
+  "types": "nds-alphabet.d.ts",
   "files": [
     "lib",
     "es",
@@ -27,14 +27,13 @@
     "url": "https://github.com/nice-digital/nice-design-system/issues"
   },
   "keywords": [
-    "column",
-    "list"
+    "alphabet",
+    "a to z"
   ],
   "author": "Chris Barker <chris.barker@nice.org.uk>",
   "homepage": "https://design-system.nice.org.uk/",
   "license": "MIT",
   "dependencies": {
     "prop-types": "^15.8.1"
-  },
-  "gitHead": "e33b39c96bdba7d3c4bf1e74d4101395ccd4f6e6"
+  }
 }
