--- a/components/design-system/package.json
+++ b/components/design-system/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nice-digital/design-system",
-  "version": "1.4.0",
+  "version": "1.6.2-alpha.0",
   "description": "Your source for quickly creating consistent on-brand NICE digital services",
   "author": "Ian Routledge <ian.routledge@nice.org.uk>",
   "homepage": "https://design-system.nice.org.uk/",
@@ -33,14 +33,16 @@
   },
   "dependencies": {
     "@nice-digital/icons": "^2.2.7",
+    "@nice-digital/nds-a-z-list": "^0.2.1-alpha.0",
     "@nice-digital/nds-action-banner": "^1.2.14",
     "@nice-digital/nds-alert": "^1.2.12",
+    "@nice-digital/nds-alphabet": "^0.3.1-alpha.0",
     "@nice-digital/nds-breadcrumbs": "^1.2.14",
     "@nice-digital/nds-button": "^1.2.12",
     "@nice-digital/nds-callout": "^1.1.14",
     "@nice-digital/nds-card": "^1.2.15",
-    "@nice-digital/nds-checkbox": "^1.2.12",
-    "@nice-digital/nds-column-list": "^1.1.0",
+    "@nice-digital/nds-checkbox": "^1.3.0-alpha.0",
+    "@nice-digital/nds-column-list": "^1.3.0-alpha.0",
     "@nice-digital/nds-container": "^1.0.8",
     "@nice-digital/nds-core": "^1.2.12",
     "@nice-digital/nds-enhanced-pagination": "^1.0.6",
