--- a/components/nds-a-z-list/package.json
+++ b/components/nds-a-z-list/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@nice-digital/nds-column-list",
-  "version": "1.3.0-alpha.0",
-  "description": "Column List component for the NICE Design System",
-  "main": "lib/ColumnList.js",
-  "module": "es/ColumnList.js",
-  "style": "scss/column-list.js",
-  "types": "nds-column-list.d.ts",
+  "name": "@nice-digital/nds-a-z-list",
+  "version": "0.2.1-alpha.0",
+  "description": "A to Z list component for the NICE Design System",
+  "main": "lib/AZList.js",
+  "module": "es/AZList.js",
+  "style": "scss/a-z-list.js",
+  "types": "nds-a-z-list.d.ts",
   "files": [
     "lib",
     "es",
@@ -27,7 +27,7 @@
     "url": "https://github.com/nice-digital/nice-design-system/issues"
   },
   "keywords": [
-    "column",
+    "a to z",
     "list"
   ],
   "author": "Chris Barker <chris.barker@nice.org.uk>",
@@ -35,6 +35,5 @@
   "license": "MIT",
   "dependencies": {
     "prop-types": "^15.8.1"
-  },
-  "gitHead": "e33b39c96bdba7d3c4bf1e74d4101395ccd4f6e6"
+  }
 }
