--- a/components/nds-checkbox/package.json
+++ b/components/nds-checkbox/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-checkbox",
-	"version": "1.3.0-alpha.0",
+	"version": "1.3.0",
 	"description": "Checkbox component for the NICE Design System",
 	"author": "Warren Keith <warren.keith@nice.org.uk>",
 	"homepage": "https://design-system.nice.org.uk/",
