Replace node-sass with sass; run sass migrator on deprecated division operators

--- a/package.json
+++ b/package.json
@@ -149,7 +149,6 @@
 		"lerna": "^3.20.2",
 		"load-grunt-config": "^3.0.1",
 		"lodash": "^4.17.20",
-		"node-sass": "^4.13.0",
 		"node-sass-tilde-importer": "^1.0.2",
 		"prettier": "^1.18.2",
 		"prop-types": "^15.8.1",
@@ -161,6 +160,7 @@
 		"react-scripts": "3.1.2",
 		"regenerator-runtime": "^0.13.7",
 		"rimraf": "^2.6.2",
+		"sass": "^1.49.9",
 		"sass-loader": "^7.1.0",
 		"slugify": "^1.6.5",
 		"style-loader": "^0.23.1",
