--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
 		"@nice-digital/global-nav": "^4.1.707-GN-165-IconsDep",
 		"@storybook/addon-a11y": "^6.4.14",
 		"@storybook/addon-actions": "^6.4.14",
+		"@storybook/addon-docs": "^6.4.19",
 		"@storybook/addon-essentials": "^6.4.14",
 		"@storybook/addon-knobs": "^6.4.0",
 		"@storybook/addon-links": "^6.4.14",
