BNF-1277 Add alert colours to semantic styles

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -7,6 +7,7 @@
 		"christian-kohler.npm-intellisense",
 		"christian-kohler.path-intellisense",
 		"esbenp.prettier-vscode",
-		"hex-ci.stylelint-plus"
+		"hex-ci.stylelint-plus",
+		"silvenon.mdx"
 	]
 }
