--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -2,13 +2,13 @@
 	"name": "@nice-digital/design-system-documentation",
 	"private": true,
 	"description": "Documentation for the NICE Design System",
-	"version": "1.6.8",
+	"version": "1.7.0-alpha.0",
 	"author": "Warren Keith <warren.keith@nice.org.uk>",
 	"keywords": [
 		"gatsby"
 	],
 	"dependencies": {
-		"@nice-digital/design-system": "^1.7.4",
+		"@nice-digital/design-system": "^1.8.0-alpha.0",
 		"@nice-digital/icons": "^2.2.7",
 		"@nice-digital/nds-a-z-list": "^0.2.2",
 		"@nice-digital/nds-action-banner": "^1.2.17",
@@ -23,7 +23,7 @@
 		"@nice-digital/nds-container": "^1.0.11",
 		"@nice-digital/nds-core": "^1.3.1",
 		"@nice-digital/nds-enhanced-pagination": "^1.0.9",
-		"@nice-digital/nds-filters": "^1.2.24",
+		"@nice-digital/nds-filters": "^1.3.0-alpha.0",
 		"@nice-digital/nds-form-group": "^1.2.15",
 		"@nice-digital/nds-forms": "^1.2.6",
 		"@nice-digital/nds-full-bleed": "^1.1.15",
