--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -1,6 +1,6 @@
 {
   "name": "storybook",
-  "version": "1.7.4",
+  "version": "1.8.0-alpha.0",
   "private": true,
   "description": "> TODO: description",
   "author": "Warren Keith <warren.keith@nice.org.uk>",
@@ -19,7 +19,7 @@
     "url": "git+https://github.com/nice-digital/nice-design-system.git"
   },
   "dependencies": {
-    "@nice-digital/design-system": "^1.7.4",
+    "@nice-digital/design-system": "^1.8.0-alpha.0",
     "@nice-digital/nds-a-z-list": "^0.2.2",
     "@nice-digital/nds-action-banner": "^1.2.17",
     "@nice-digital/nds-alert": "^1.2.16",
@@ -33,7 +33,7 @@
     "@nice-digital/nds-container": "^1.0.11",
     "@nice-digital/nds-core": "^1.3.1",
     "@nice-digital/nds-enhanced-pagination": "^1.0.9",
-    "@nice-digital/nds-filters": "^1.2.24",
+    "@nice-digital/nds-filters": "^1.3.0-alpha.0",
     "@nice-digital/nds-form-group": "^1.2.15",
     "@nice-digital/nds-forms": "^1.2.6",
     "@nice-digital/nds-full-bleed": "^1.1.15",
