--- a/components/icons/tsconfig.es6.json
+++ b/components/icons/tsconfig.es6.json
@@ -1,7 +1,7 @@
 {
 	"compilerOptions": {
 		"target": "ES6",
-		"outDir": "es6",
+		"outDir": "es",
 		"rootDir": "./ts",
 		"jsx": "react",
 		"declaration": true,
