--- a/components/icons/package.json
+++ b/components/icons/package.json
@@ -4,13 +4,17 @@
 	"description": "Icons for use in NICE Digital Services",
 	"scripts": {
 		"start": "npm run webfont && npm run svgr && npm run esify",
+		"prewebfont": "rimraf dist && mkdirp dist && rimraf scss && mkdirp scss",
 		"webfont": "fantasticon",
+		"postwebfont": "npm run readme",
+    "presvgr": "rimraf ts",
 		"svgr": "svgr -d ts src",
+    "preesify": "rimraf es && rimraf lib",
 		"esify": "tsc -p tsconfig.es5.json && tsc -p tsconfig.es6.json",
 		"test": "echo \"No tests :)\" && exit 0",
-		"readme": "doctoc ./README.md && babel-node ./scripts/readme-replacer.js",
+		"readme": "doctoc ./README.md && node ./scripts/readme-replacer.js",
 		"// Lifecycle hooks": "",
-		"prepublishOnly": "npm start && npm run readme"
+		"prepublishOnly": "npm start"
 	},
 	"repository": {
 		"type": "git",
@@ -35,7 +39,7 @@
 	"homepage": "https://design-system.nice.org.uk",
 	"files": [
 		"dist",
-		"es6",
+		"es",
 		"lib",
 		"ts",
 		"scss",
