NDS-280 Improve current colour attribute

--- a/components/icons/.svgrrc
+++ b/components/icons/.svgrrc
@@ -2,7 +2,7 @@
 	"expandProps": "end",
 	"icon": true,
 	"replaceAttrValues": {
-		"#000": "{'currentColor'}"
+		"#000": "currentColor"
 	},
 	"svgo": true,
 	"svgProps": {
