NDS-280 Icon updates

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"devapp": "lerna run --scope=dev-app start",
 		"devapp:dev": "concurrently npm:devapp npm:build:es:watch",
 		"// DOCUMENTATION": "",
-		"docs:dev": "lerna run --stream --scope=@nice-digital/design-system-documentation start",
+		"docs:dev": "lerna run --stream --no-prefix --scope=@nice-digital/design-system-documentation start",
 		"docs:build": "lerna run --stream --scope=@nice-digital/design-system-documentation build",
 		"docs:serve": "lerna run --stream --scope=@nice-digital/design-system-documentation serve",
 		"// STORYBOOK": "",
@@ -80,7 +80,7 @@
 		"@mdx-js/mdx": "^1.5.1",
 		"@mdx-js/react": "^1.5.1",
 		"@nice-digital/eslint-config": "^1.0.1",
-		"@nice-digital/global-nav": "^4.1.707-GN-165-IconsDep",
+		"@nice-digital/global-nav": "^4.1.838",
 		"@storybook/addon-a11y": "^6.4.14",
 		"@storybook/addon-actions": "^6.4.14",
 		"@storybook/addon-docs": "^6.4.19",
