--- a/components/nds-alphabet/package.json
+++ b/components/nds-alphabet/package.json
@@ -34,6 +34,7 @@
   "homepage": "https://design-system.nice.org.uk/",
   "license": "MIT",
   "dependencies": {
+    "@nice-digital/nds-core": "^1.3.1",
     "prop-types": "^15.8.1"
   }
 }
