--- a/components/nds-column-list/package.json
+++ b/components/nds-column-list/package.json
@@ -34,6 +34,7 @@
   "homepage": "https://design-system.nice.org.uk/",
   "license": "MIT",
   "dependencies": {
+    "@nice-digital/nds-core": "^1.3.1",
     "prop-types": "^15.8.1"
   },
   "gitHead": "e33b39c96bdba7d3c4bf1e74d4101395ccd4f6e6"
