--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -63,7 +63,9 @@
 	"scripts": {
 		"build": "gatsby build",
 		"develop-playground": "cross-env GATSBY_GRAPHQL_IDE=playground gatsby develop",
-		"predevelop": "copyfiles -f \"node_modules/@nice-digital/icons/dist/*.{woff,woff2}\" \"public/fonts\"",
+		"predevelop": "npm run copy-nice-icons-webfont && npm run copy-nice-icons-svgs",
+		"copy-nice-icons-webfont": "copyfiles -f \"node_modules/@nice-digital/icons/dist/*.{woff,woff2}\" \"public/fonts\"",
+		"copy-nice-icons-svgs": "copyfiles -f \"node_modules/@nice-digital/icons/src/*.svg\" \"public/fonts\"",
 		"develop": "gatsby develop",
 		"format": "prettier --write \"**/*.{js,jsx,json,md}\"",
 		"start": "gatsby clean && npm run develop",
