NDS-280 Replace grunt-webfont with fantasticon (#275)
* NDS-280 Initial commit

* NDS-280 Further icons work

* NDS-280 Rationalise git ignores

* NDS-280 Improve current colour attribute

* NDS-280 Update doctoc

* NDS-280 Add no cache attribute

* NDS-280 Docs

* NDS-280 Icon updates

* NDS-280 Fix web font path

* NDS-280 Include icons in docs site build

--- a/components/icons/.svgrrc
+++ b/components/icons/.svgrrc
@@ -2,12 +2,13 @@
 	"expandProps": "end",
 	"icon": true,
 	"replaceAttrValues": {
-		"#000": "{props.colour || 'currentColor'}"
+		"#000": "currentColor"
 	},
 	"svgo": true,
 	"svgProps": {
 		"className": "icon",
 		"aria-hidden": true,
 		"focusable": "false"
-	}
+	},
+	"typescript": true
 }
