--- a/components/icons/package.json
+++ b/components/icons/package.json
@@ -2,17 +2,19 @@
 	"name": "@nice-digital/icons",
 	"version": "2.2.7",
 	"description": "Icons for use in NICE Digital Services",
-	"main": "index.js",
 	"scripts": {
-		"start": "npm run webfont && npm run svgr",
-		"svgr": "svgr -d es6 src && npm run es5ify",
-		"es5ify": "babel es6 -d lib",
-		"webfont": "grunt dist --color",
+		"start": "npm run webfont && npm run svgr && npm run esify",
+		"prewebfont": "rimraf dist && mkdirp dist && rimraf scss && mkdirp scss",
+		"webfont": "fantasticon",
+		"postwebfont": "npm run readme",
+    "presvgr": "rimraf ts",
+		"svgr": "svgr -d ts src",
+    "preesify": "rimraf es && rimraf lib",
+		"esify": "tsc -p tsconfig.es5.json && tsc -p tsconfig.es6.json",
 		"test": "echo \"No tests :)\" && exit 0",
-		"readme": "doctoc ./README.md && babel-node ./scripts/readme-replacer.js",
-		"lint": "eslint .",
+		"readme": "doctoc ./README.md && node ./scripts/readme-replacer.js",
 		"// Lifecycle hooks": "",
-		"prepublishOnly": "npm start && npm run readme"
+		"prepublishOnly": "npm start"
 	},
 	"repository": {
 		"type": "git",
@@ -37,8 +39,9 @@
 	"homepage": "https://design-system.nice.org.uk",
 	"files": [
 		"dist",
-		"es6",
+		"es",
 		"lib",
+		"ts",
 		"scss",
 		"src"
 	],
@@ -49,8 +52,10 @@
 		"react": ">=15"
 	},
 	"engines": {
-		"node": ">= 10.0.0",
-		"npm": ">= 6.8.0"
+		"node": ">= 14.0.0"
 	},
-	"gitHead": "b70a1e39df19c1943a000c841aca8d9bb3ef4ff1"
+	"gitHead": "b70a1e39df19c1943a000c841aca8d9bb3ef4ff1",
+	"devDependencies": {
+		"fantasticon": "^1.2.3"
+	}
 }
