--- a/components/nds-a-z-list/package.json
+++ b/components/nds-a-z-list/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nice-digital/nds-a-z-list",
-  "version": "1.0.0",
+  "version": "1.0.1-alpha.0",
   "description": "A to Z list component for the NICE Design System",
   "main": "lib/AZList.js",
   "module": "es/AZList.js",
@@ -34,7 +34,7 @@
   "homepage": "https://design-system.nice.org.uk/",
   "license": "MIT",
   "dependencies": {
-    "@nice-digital/nds-core": "^1.3.2",
+    "@nice-digital/nds-core": "^1.3.3-alpha.0",
     "prop-types": "^15.8.1"
   }
 }
