--- a/components/nds-action-banner/package.json
+++ b/components/nds-action-banner/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-action-banner",
-	"version": "1.2.18",
+	"version": "1.2.19-alpha.0",
 	"description": "Action banner component for the NICE Design System",
 	"keywords": [
 		"banner"
@@ -34,8 +34,8 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
-		"@nice-digital/icons": "^3.0.0",
-		"@nice-digital/nds-core": "^1.3.2",
+		"@nice-digital/icons": "^3.0.1-alpha.0",
+		"@nice-digital/nds-core": "^1.3.3-alpha.0",
 		"classnames": "^2.3.1",
 		"prop-types": "^15.7.2"
 	},
