--- a/components/nds-callout/package.json
+++ b/components/nds-callout/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-callout",
-	"version": "1.1.18",
+	"version": "1.1.19-alpha.0",
 	"description": "Callout / promotional component for the NICE Design System",
 	"author": "Warren Keith <warren.keith@nice.org.uk>",
 	"homepage": "https://design-system.nice.org.uk",
@@ -34,8 +34,8 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
-		"@nice-digital/nds-core": "^1.3.2",
-		"@nice-digital/nds-maintain-ratio": "^1.2.17",
+		"@nice-digital/nds-core": "^1.3.3-alpha.0",
+		"@nice-digital/nds-maintain-ratio": "^1.2.18-alpha.0",
 		"classnames": "^2.2.6",
 		"prop-types": "^15.7.2"
 	},
