--- a/components/nds-container/package.json
+++ b/components/nds-container/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-container",
-	"version": "1.0.12",
+	"version": "1.0.13-alpha.0",
 	"description": "Container component for the NICE Design System",
 	"keywords": [
 		"container"
@@ -37,7 +37,7 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
-		"@nice-digital/nds-core": "^1.3.2",
+		"@nice-digital/nds-core": "^1.3.3-alpha.0",
 		"classnames": "^2.2.6",
 		"prop-types": "^15.7.2"
 	},
