--- a/components/nds-full-bleed/package.json
+++ b/components/nds-full-bleed/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-full-bleed",
-	"version": "1.1.16",
+	"version": "1.1.17-alpha.0",
 	"description": "Full bleed (edge-to-edge) component for the NICE Design System",
 	"author": "Warren Keith <warren.keith@nice.org.uk>",
 	"homepage": "https://design-system.nice.org.uk",
@@ -34,7 +34,7 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
-		"@nice-digital/nds-core": "^1.3.2",
+		"@nice-digital/nds-core": "^1.3.3-alpha.0",
 		"classnames": "^2.2.6",
 		"prop-types": "^15.7.2"
 	},
