--- a/components/design-system/package.json
+++ b/components/design-system/package.json
@@ -67,8 +67,11 @@
     "@nice-digital/nds-tabs": "^1.2.22-alpha.0",
     "@nice-digital/nds-tag": "^1.2.17-alpha.0",
     "@nice-digital/nds-textarea": "^1.2.17-alpha.0",
-    "normalize.css": "8.0.1",
-    "react": "^16.11.0"
+    "normalize.css": "8.0.1"
   },
+	"peerDependencies": {
+		"react": "^16 || ^17",
+		"react-dom": "^16 || ^17"
+	},
   "gitHead": "e33b39c96bdba7d3c4bf1e74d4101395ccd4f6e6"
 }
