--- a/components/nds-panel/package.json
+++ b/components/nds-panel/package.json
@@ -37,8 +37,8 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"peerDependencies": {
-		"react": "^16 || ^17",
-		"react-dom": "^16 || ^17"
+		"react": "^16 || ^17 || ^18",
+		"react-dom": "^16 || ^17 || ^18"
 	},
 	"dependencies": {
 		"@nice-digital/nds-core": "^1.3.3-alpha.0",
