--- a/components/design-system/package.json
+++ b/components/design-system/package.json
@@ -70,8 +70,8 @@
     "normalize.css": "8.0.1"
   },
 	"peerDependencies": {
-		"react": "^16 || ^17",
-		"react-dom": "^16 || ^17"
+		"react": "^16 || ^17 || ^18",
+		"react-dom": "^16 || ^17 || ^18"
 	},
   "gitHead": "e33b39c96bdba7d3c4bf1e74d4101395ccd4f6e6"
 }
