--- a/components/nds-form-group/package.json
+++ b/components/nds-form-group/package.json
@@ -43,8 +43,8 @@
 		"prop-types": "^15.7.2"
 	},
 	"peerDependencies": {
-		"react": "^16 || ^17",
-		"react-dom": "^16 || ^17"
+		"react": "^16 || ^17 || ^18",
+		"react-dom": "^16 || ^17 || ^18"
 	},
 	"gitHead": "b70a1e39df19c1943a000c841aca8d9bb3ef4ff1"
 }
