--- a/components/nds-full-bleed/package.json
+++ b/components/nds-full-bleed/package.json
@@ -39,8 +39,8 @@
 		"prop-types": "^15.7.2"
 	},
 	"peerDependencies": {
-		"react": "^16 || ^17",
-		"react-dom": "^16 || ^17"
+		"react": "^16 || ^17 || ^18",
+		"react-dom": "^16 || ^17 || ^18"
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.5.0"
