--- a/components/nds-grid/package.json
+++ b/components/nds-grid/package.json
@@ -42,7 +42,7 @@
 		"prop-types": "^15.7.2"
 	},
 	"peerDependencies": {
-		"react": "^16 || ^17"
+		"react": "^16 || ^17 ^18"
 	},
 	"gitHead": "b70a1e39df19c1943a000c841aca8d9bb3ef4ff1"
 }
