--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"description": "Monorepo for the NICE Design System",
 	"scripts": {
 		"start": "npm run dev",
-		"dev": "concurrently npm:build:es:watch npm:devapp npm:storybook npm:docs:dev",
+		"dev": "concurrently npm:build:es:watch npm:docs:dev",
 		"// ICONS": "",
 		"icons": "lerna run --stream --scope=@nice-digital/icons",
 		"icons:start": "npm run icons -- start",
@@ -148,6 +148,7 @@
 		"lodash": "^4.17.20",
 		"mkdirp": "^1.0.4",
 		"node-sass-tilde-importer": "^1.0.2",
+		"postcss": "^8.4.14",
 		"prettier": "^1.18.2",
 		"prop-types": "^15.8.1",
 		"react": "^16.11.0",
@@ -162,9 +163,9 @@
 		"sass-loader": "^7.1.0",
 		"slugify": "^1.6.5",
 		"style-loader": "^0.23.1",
-		"stylelint": "^14.3.0",
+		"stylelint": "^14.4.0",
 		"stylelint-config-prettier": "^5.2.0",
-		"stylelint-config-standard": "^18.3.0",
+		"stylelint-config-standard-scss": "^4.0.0",
 		"stylelint-order": "^3.1.0",
 		"stylelint-prettier": "^1.1.1",
 		"stylelint-scss": "^3.21.0",
