NDS-257 Fix md tocs having extra heading 1

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,5 +31,6 @@
 		"activityBar.foreground": "#3b3938"
 	},
 	"markdown.extension.tableFormatter.enabled": false,
-	"markdown.extension.tableFormatter.normalizeIndentation": false
+	"markdown.extension.tableFormatter.normalizeIndentation": false,
+	"markdown.extension.toc.levels": "2..6"
 }
