NDS-257 Replace colour tokens

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -44,7 +44,10 @@
 				"hasBlock": true
 			}
 		],
-		"order/properties-alphabetical-order": true
+		"order/properties-alphabetical-order": true,
+		"color-function-notation": null,
+		"selector-class-pattern": null,
+		"scss/double-slash-comment-empty-line-before": null
 	},
 	"ignoreFiles": [
 		"**/vendor/**/*.scss",
