--- a/.stylelintrc
+++ b/.stylelintrc
@@ -5,10 +5,13 @@
 	],
 	"plugins": [
 		"stylelint-scss",
-		"stylelint-order"
+		"stylelint-order",
+		"stylelint-selector-bem-pattern"
 	],
 	"rules": {
+		"string-quotes": "single",
 		"at-rule-no-unknown": null,
+		"scss/operator-no-newline-after": null,
 		"scss/at-rule-no-unknown": true,
 		"block-closing-brace-newline-after": [
 			"always",
@@ -44,7 +47,11 @@
 				"hasBlock": true
 			}
 		],
-		"order/properties-alphabetical-order": true
+		"order/properties-alphabetical-order": true,
+		"selector-class-pattern": null,
+		"plugin/selector-bem-pattern": {
+			"preset": "bem"
+		}
 	},
 	"ignoreFiles": [
 		"**/vendor/**/*.scss",
