--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -8,6 +8,7 @@
 		"christian-kohler.path-intellisense",
 		"esbenp.prettier-vscode",
 		"silvenon.mdx",
-		"stylelint.vscode-stylelint"
+		"stylelint.vscode-stylelint",
+		"mrmlnc.vscode-scss"
 	]
 }
