NDS-257 Update eslint and prettier

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"lint:scss": "stylelint ./{packages,components}/**/*.scss",
 		"lint:scss:fix": "npm run lint:scss -- --fix",
 		"prettier": "prettier --check components/*/{src,scss,__{tests,mocks}__}/**/*.{scss,js,json} packages/**/*.{scss,js,json}",
+		"prettier:fix": "npm run prettier -- --write",
 		"// TRANSIPLE ES6": "",
 		"prebuild:lib": "lerna exec rimraf lib",
 		"build:lib": "lerna exec --scope=@nice-digital/nds-* --parallel -- babel src -d lib --source-maps --root-mode upward",
@@ -105,8 +106,8 @@
 		"@types/react-helmet": "^5.0.20",
 		"@types/react-router-dom": "^4.3.5",
 		"@types/storybook__react": "^5.2.1",
-		"@typescript-eslint/eslint-plugin": "^4.33.0",
-		"@typescript-eslint/parser": "^4.33.0",
+		"@typescript-eslint/eslint-plugin": "^5.30.7",
+		"@typescript-eslint/parser": "^5.30.7",
 		"@whitespace/storybook-addon-html": "^4.2.0",
 		"babel-core": "^7.0.0-bridge.0",
 		"babel-eslint": "^10.0.2",
@@ -122,12 +123,12 @@
 		"enzyme": "^3.10.0",
 		"enzyme-adapter-react-16": "^1.14.0",
 		"enzyme-to-json": "^3.3.5",
-		"eslint": "^6.8.0",
-		"eslint-config-prettier": "^6.15.0",
-		"eslint-plugin-import": "^2.25.4",
-		"eslint-plugin-jsx-a11y": "^6.5.1",
-		"eslint-plugin-prettier": "^3.4.1",
-		"eslint-plugin-react": "^7.28.0",
+		"eslint": "^8.20.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-import": "^2.26.0",
+		"eslint-plugin-jsx-a11y": "^6.6.0",
+		"eslint-plugin-prettier": "^4.2.1",
+		"eslint-plugin-react": "^7.30.1",
 		"faker": "^4.1.0",
 		"gatsby": "^2.17.6",
 		"gatsby-image": "^2.2.30",
@@ -149,7 +150,7 @@
 		"mkdirp": "^1.0.4",
 		"node-sass-tilde-importer": "^1.0.2",
 		"postcss": "^8.4.14",
-		"prettier": "^1.18.2",
+		"prettier": "^2.7.1",
 		"prop-types": "^15.8.1",
 		"react": "^16.11.0",
 		"react-app-polyfill": "^2.0.0",
