--- a/package.json
+++ b/package.json
@@ -99,7 +99,7 @@
 		"@types/classnames": "^2.2.11",
 		"@types/faker": "^4.1.5",
 		"@types/history": "^4.7.11",
-		"@types/jest": "^24.0.17",
+		"@types/jest": "^28.1.6",
 		"@types/node": "^12.20.42",
 		"@types/react": "^16.14.21",
 		"@types/react-dom": "^16.8.5",
@@ -111,7 +111,7 @@
 		"@whitespace/storybook-addon-html": "^4.2.0",
 		"babel-core": "^7.0.0-bridge.0",
 		"babel-eslint": "^10.0.2",
-		"babel-jest": "^24.9.0",
+		"babel-jest": "^28.1.3",
 		"babel-loader": "^8.2.3",
 		"babel-preset-gatsby": "^0.11.0",
 		"classnames": "^2.2.6",
@@ -144,7 +144,8 @@
 		"gatsby-transformer-sharp": "^2.3.1",
 		"history": "^4.9.0",
 		"identity-obj-proxy": "^3.0.0",
-		"jest": "^27.4.7",
+		"jest": "^28.1.3",
+		"jest-environment-jsdom": "^28.1.3",
 		"lerna": "^3.20.2",
 		"lodash": "^4.17.20",
 		"mkdirp": "^1.0.4",
