--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"devapp:dev": "concurrently npm:devapp npm:build:es:watch",
 		"// DOCUMENTATION": "",
 		"docs:dev": "lerna run --stream --no-prefix --scope=@nice-digital/design-system-documentation start",
+		"docs:clean": "lerna run --stream --no-prefix --scope=@nice-digital/design-system-documentation clean",
 		"docs:build": "lerna run --stream --scope=@nice-digital/design-system-documentation build",
 		"docs:serve": "lerna run --stream --scope=@nice-digital/design-system-documentation serve",
 		"// STORYBOOK": "",
@@ -81,7 +82,7 @@
 		"@mdx-js/mdx": "^1.5.1",
 		"@mdx-js/react": "^1.5.1",
 		"@nice-digital/eslint-config": "^1.0.1",
-		"@nice-digital/global-nav": "^4.1.850-GN-187-Rebrand",
+		"@nice-digital/global-nav": "^5.0.865-GN-187-Rebrand",
 		"@storybook/addon-a11y": "^6.5.9",
 		"@storybook/addon-actions": "^6.5.9",
 		"@storybook/addon-docs": "^6.5.9",
@@ -91,6 +92,8 @@
 		"@storybook/addon-storysource": "^6.5.9",
 		"@storybook/addon-viewport": "^6.5.9",
 		"@storybook/addons": "^6.5.9",
+		"@storybook/builder-webpack5": "^6.5.9",
+		"@storybook/manager-webpack5": "^6.5.9",
 		"@storybook/preset-scss": "^1.0.3",
 		"@storybook/react": "^6.5.9",
 		"@storybook/source-loader": "^6.5.9",
@@ -107,17 +110,15 @@
 		"@types/storybook__react": "^5.2.1",
 		"@typescript-eslint/eslint-plugin": "^5.30.7",
 		"@typescript-eslint/parser": "^5.30.7",
-		"@whitespace/storybook-addon-html": "^4.2.0",
+		"@whitespace/storybook-addon-html": "^5.0.0",
 		"babel-core": "^7.0.0-bridge.0",
 		"babel-eslint": "^10.0.2",
 		"babel-jest": "^28.1.3",
-		"babel-loader": "^8.2.3",
 		"babel-preset-gatsby": "^0.11.0",
 		"classnames": "^2.2.6",
 		"concurrently": "^4.1.1",
 		"copyfiles": "^2.1.0",
 		"cross-env": "^7.0.3",
-		"css-loader": "^3.0.0",
 		"doctoc": "^2.2.0",
 		"enzyme": "^3.10.0",
 		"enzyme-adapter-react-16": "^1.14.0",
@@ -134,7 +135,7 @@
 		"gatsby-plugin-mdx": "^1.0.56",
 		"gatsby-plugin-offline": "^3.0.17",
 		"gatsby-plugin-react-helmet": "^3.1.13",
-		"gatsby-plugin-sass": "^2.1.20",
+		"gatsby-plugin-sass": "^5.19.0",
 		"gatsby-plugin-sharp": "^2.2.34",
 		"gatsby-plugin-typescript": "^2.1.16",
 		"gatsby-source-filesystem": "^2.1.35",
@@ -151,18 +152,16 @@
 		"postcss": "^8.4.14",
 		"prettier": "^2.7.1",
 		"prop-types": "^15.8.1",
-		"react": "^16.11.0",
-		"react-app-polyfill": "^2.0.0",
-		"react-dom": "^16.11.0",
+		"react": "^17.0.2",
+		"react-app-polyfill": "^3.0.0",
+		"react-dom": "^17.0.2",
 		"react-helmet": "^5.2.1",
 		"react-router-dom": "^5.3.0",
-		"react-scripts": "3.1.2",
+		"react-scripts": "^5.0.1",
 		"regenerator-runtime": "^0.13.7",
 		"rimraf": "^3.0.2",
 		"sass": "^1.53.0",
-		"sass-loader": "^10.3.1",
 		"slugify": "^1.6.5",
-		"style-loader": "^0.23.1",
 		"stylelint": "^14.4.0",
 		"stylelint-config-prettier": "^9.0.3",
 		"stylelint-config-standard-scss": "^5.0.0",
@@ -170,9 +169,15 @@
 		"stylelint-prettier": "^2.0.0",
 		"stylelint-scss": "^4.3.0",
 		"stylelint-selector-bem-pattern": "^2.1.1",
-		"typescript": "^4.7.4"
+		"typescript": "^4.7.4",
+		"webpack": "^5.73.0"
 	},
 	"volta": {
 		"node": "14.20.0"
+	},
+	"dependencies": {
+		"css-loader": "^6.7.1",
+		"sass-loader": "^13.0.2",
+		"style-loader": "^3.3.1"
 	}
 }
