--- a/components/nds-jquery/package.json
+++ b/components/nds-jquery/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nice-digital/nds-jquery",
-  "version": "1.2.6",
+  "version": "1.2.7-alpha.0",
   "description": "JQuery utils for implementing the NICE Design System",
   "keywords": [
     "jquery"
