--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.30.7",
 		"@typescript-eslint/parser": "^5.30.7",
 		"@whitespace/storybook-addon-html": "^5.0.0",
+		"@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
 		"babel-core": "^7.0.0-bridge.0",
 		"babel-eslint": "^10.0.2",
 		"babel-jest": "^28.1.3",
@@ -121,7 +122,6 @@
 		"cross-env": "^7.0.3",
 		"doctoc": "^2.2.0",
 		"enzyme": "^3.10.0",
-		"enzyme-adapter-react-16": "^1.14.0",
 		"enzyme-to-json": "^3.3.5",
 		"eslint": "^8.20.0",
 		"eslint-config-prettier": "^8.5.0",
