--- a/components/nds-form-group/package.json
+++ b/components/nds-form-group/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-form-group",
-	"version": "3.0.1-alpha.0",
+	"version": "3.0.1",
 	"description": "Form group component for the NICE Design System",
 	"author": "Warren Keith <warren.keith@nice.org.uk>",
 	"homepage": "https://github.com/nice-digital/nice-design-system#readme",
@@ -37,8 +37,8 @@
 		"@babel/cli": "^7.5.0"
 	},
 	"dependencies": {
-		"@nice-digital/nds-core": "^3.0.1-alpha.0",
-		"@nice-digital/nds-forms": "^3.0.1-alpha.0",
+		"@nice-digital/nds-core": "^3.0.1",
+		"@nice-digital/nds-forms": "^3.0.1",
 		"classnames": "^2.2.6",
 		"prop-types": "^15.7.2"
 	},
