--- a/components/nds-alert/package.json
+++ b/components/nds-alert/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nice-digital/nds-alert",
-	"version": "3.0.1",
+	"version": "3.0.2-alpha.0",
 	"description": "Alert component for the NICE Design System",
 	"keywords": [
 		"alert"
@@ -34,7 +34,7 @@
 		"url": "https://github.com/nice-digital/nice-design-system/issues"
 	},
 	"dependencies": {
-		"@nice-digital/nds-core": "^3.0.1",
+		"@nice-digital/nds-core": "^3.0.2-alpha.0",
 		"classnames": "^2.2.6",
 		"prop-types": "^15.7.2"
 	},
