--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -1,6 +1,6 @@
 {
   "name": "storybook",
-  "version": "3.0.2",
+  "version": "3.0.3-alpha.0",
   "private": true,
   "description": "> TODO: description",
   "author": "Warren Keith <warren.keith@nice.org.uk>",
@@ -19,42 +19,42 @@
     "url": "git+https://github.com/nice-digital/nice-design-system.git"
   },
   "dependencies": {
-    "@nice-digital/design-system": "^4.0.2",
-    "@nice-digital/icons": "^5.0.1",
-    "@nice-digital/nds-a-z-list": "^3.0.1",
-    "@nice-digital/nds-action-banner": "^3.0.1",
-    "@nice-digital/nds-alert": "^3.0.1",
-    "@nice-digital/nds-alphabet": "^2.0.1",
-    "@nice-digital/nds-breadcrumbs": "^3.0.1",
-    "@nice-digital/nds-button": "^3.0.1",
-    "@nice-digital/nds-callout": "^3.0.1",
-    "@nice-digital/nds-card": "^3.0.1",
-    "@nice-digital/nds-checkbox": "^3.0.1",
-    "@nice-digital/nds-column-list": "^3.0.1",
-    "@nice-digital/nds-container": "^3.0.1",
-    "@nice-digital/nds-core": "^3.0.1",
-    "@nice-digital/nds-enhanced-pagination": "^3.0.1",
-    "@nice-digital/nds-filters": "^4.0.1",
-    "@nice-digital/nds-form-group": "^3.0.1",
-    "@nice-digital/nds-forms": "^3.0.1",
-    "@nice-digital/nds-full-bleed": "^3.0.1",
-    "@nice-digital/nds-grid": "^3.0.2",
-    "@nice-digital/nds-hero": "^3.0.1",
-    "@nice-digital/nds-horizontal-nav": "^3.0.1",
-    "@nice-digital/nds-in-page-nav": "^3.0.1",
-    "@nice-digital/nds-input": "^3.0.1",
-    "@nice-digital/nds-maintain-ratio": "^3.0.1",
-    "@nice-digital/nds-page-header": "^3.0.1",
-    "@nice-digital/nds-panel": "^3.0.1",
-    "@nice-digital/nds-phase-banner": "^3.0.1",
-    "@nice-digital/nds-prev-next": "^3.0.1",
-    "@nice-digital/nds-radio": "^3.0.1",
-    "@nice-digital/nds-simple-pagination": "^3.0.1",
-    "@nice-digital/nds-stacked-nav": "^3.0.1",
-    "@nice-digital/nds-table": "^3.0.1",
-    "@nice-digital/nds-tabs": "^3.0.1",
-    "@nice-digital/nds-tag": "^3.0.1",
-    "@nice-digital/nds-textarea": "^3.0.1"
+    "@nice-digital/design-system": "^4.0.3-alpha.0",
+    "@nice-digital/icons": "^5.0.2-alpha.0",
+    "@nice-digital/nds-a-z-list": "^3.0.2-alpha.0",
+    "@nice-digital/nds-action-banner": "^3.0.2-alpha.0",
+    "@nice-digital/nds-alert": "^3.0.2-alpha.0",
+    "@nice-digital/nds-alphabet": "^2.0.2-alpha.0",
+    "@nice-digital/nds-breadcrumbs": "^3.0.2-alpha.0",
+    "@nice-digital/nds-button": "^3.0.2-alpha.0",
+    "@nice-digital/nds-callout": "^3.0.2-alpha.0",
+    "@nice-digital/nds-card": "^3.0.2-alpha.0",
+    "@nice-digital/nds-checkbox": "^3.0.2-alpha.0",
+    "@nice-digital/nds-column-list": "^3.0.2-alpha.0",
+    "@nice-digital/nds-container": "^3.0.2-alpha.0",
+    "@nice-digital/nds-core": "^3.0.2-alpha.0",
+    "@nice-digital/nds-enhanced-pagination": "^3.0.2-alpha.0",
+    "@nice-digital/nds-filters": "^4.0.2-alpha.0",
+    "@nice-digital/nds-form-group": "^3.0.2-alpha.0",
+    "@nice-digital/nds-forms": "^3.0.2-alpha.0",
+    "@nice-digital/nds-full-bleed": "^3.0.2-alpha.0",
+    "@nice-digital/nds-grid": "^3.0.3-alpha.0",
+    "@nice-digital/nds-hero": "^3.0.2-alpha.0",
+    "@nice-digital/nds-horizontal-nav": "^3.0.2-alpha.0",
+    "@nice-digital/nds-in-page-nav": "^3.0.2-alpha.0",
+    "@nice-digital/nds-input": "^3.0.2-alpha.0",
+    "@nice-digital/nds-maintain-ratio": "^3.0.2-alpha.0",
+    "@nice-digital/nds-page-header": "^3.0.2-alpha.0",
+    "@nice-digital/nds-panel": "^3.0.2-alpha.0",
+    "@nice-digital/nds-phase-banner": "^3.0.2-alpha.0",
+    "@nice-digital/nds-prev-next": "^3.0.2-alpha.0",
+    "@nice-digital/nds-radio": "^3.0.2-alpha.0",
+    "@nice-digital/nds-simple-pagination": "^3.0.2-alpha.0",
+    "@nice-digital/nds-stacked-nav": "^3.0.2-alpha.0",
+    "@nice-digital/nds-table": "^3.0.2-alpha.0",
+    "@nice-digital/nds-tabs": "^3.0.2-alpha.0",
+    "@nice-digital/nds-tag": "^3.0.2-alpha.0",
+    "@nice-digital/nds-textarea": "^3.0.2-alpha.0"
   },
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1",
