--- a/components/icons/package.json
+++ b/components/icons/package.json
@@ -56,6 +56,7 @@
 	},
 	"gitHead": "b70a1e39df19c1943a000c841aca8d9bb3ef4ff1",
 	"devDependencies": {
-		"fantasticon": "^1.2.3"
+		"fantasticon": "^1.2.3",
+		"typescript": "^4.8.4"
 	}
 }
