--- a/components/nds-column-list/package.json
+++ b/components/nds-column-list/package.json
@@ -37,5 +37,8 @@
     "@nice-digital/nds-core": "^3.0.2",
     "prop-types": "^15.8.1"
   },
-  "gitHead": "e33b39c96bdba7d3c4bf1e74d4101395ccd4f6e6"
+  "gitHead": "e33b39c96bdba7d3c4bf1e74d4101395ccd4f6e6",
+  "devDependencies": {
+    "typescript": "^4.8.4"
+  }
 }
