--- a/components/nds-container/package.json
+++ b/components/nds-container/package.json
@@ -44,5 +44,8 @@
 	"peerDependencies": {
 		"react": "^16 || ^17 || ^18"
 	},
-	"gitHead": "b70a1e39df19c1943a000c841aca8d9bb3ef4ff1"
+	"gitHead": "b70a1e39df19c1943a000c841aca8d9bb3ef4ff1",
+	"devDependencies": {
+		"typescript": "^4.8.4"
+	}
 }
