--- a/components/nds-jquery/package.json
+++ b/components/nds-jquery/package.json
@@ -32,7 +32,8 @@
     "url": "https://github.com/nice-digital/nice-design-system/issues"
   },
   "devDependencies": {
-    "@babel/cli": "^7.5.0"
+    "@babel/cli": "^7.5.0",
+    "typescript": "^4.8.4"
   },
   "gitHead": "b70a1e39df19c1943a000c841aca8d9bb3ef4ff1"
 }
