--- a/components/nds-page-header/package.json
+++ b/components/nds-page-header/package.json
@@ -45,7 +45,8 @@
 		"react-dom": "^16 || ^17 || ^18"
 	},
 	"devDependencies": {
-		"@babel/cli": "^7.5.0"
+		"@babel/cli": "^7.5.0",
+		"typescript": "^4.8.4"
 	},
 	"gitHead": "b70a1e39df19c1943a000c841aca8d9bb3ef4ff1"
 }
