NDS-337 Link transpiled TS modules to Next.hs sln

--- a/components/nds-action-banner/tsconfig.json
+++ b/components/nds-action-banner/tsconfig.json
@@ -2,7 +2,7 @@
 	"extends": "../../tsconfig",
 	"compilerOptions": {
 		"rootDir": "./src",
-		"outDir": "./dist",
+		"outDir": "./es",
 		"incremental": true,
 		"composite": true
 	},
