NDS-337 Add basic RTL test for ActionBanner

--- a/components/nds-action-banner/tsconfig.json
+++ b/components/nds-action-banner/tsconfig.json
@@ -6,5 +6,6 @@
 		"incremental": true,
 		"composite": true
 	},
-	"include": ["src/**/*"]
+	"include": ["src/**/*"],
+	"exclude": ["src/*.test.ts"]
 }
