--- a/components/icons/package.json
+++ b/components/icons/package.json
@@ -56,6 +56,9 @@
 	},
 	"gitHead": "b70a1e39df19c1943a000c841aca8d9bb3ef4ff1",
 	"devDependencies": {
+		"@testing-library/jest-dom": "^5.16.5",
+		"@testing-library/react": "^13.4.0",
+		"@types/jest": "^29.2.2",
 		"fantasticon": "^1.2.3",
 		"typescript": "^4.8.4"
 	}
