--- a/components/nds-a-z-list/package.json
+++ b/components/nds-a-z-list/package.json
@@ -38,6 +38,9 @@
     "prop-types": "^15.8.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.2.2",
     "typescript": "^4.8.4"
   }
 }
