--- a/components/nds-form-group/package.json
+++ b/components/nds-form-group/package.json
@@ -35,6 +35,9 @@
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.5.0",
+		"@testing-library/jest-dom": "^5.16.5",
+		"@testing-library/react": "^13.4.0",
+		"@types/jest": "^29.2.2",
 		"typescript": "^4.8.4"
 	},
 	"dependencies": {
