--- a/components/nds-grid/package.json
+++ b/components/nds-grid/package.json
@@ -46,6 +46,9 @@
 	},
 	"gitHead": "b70a1e39df19c1943a000c841aca8d9bb3ef4ff1",
 	"devDependencies": {
+		"@testing-library/jest-dom": "^5.16.5",
+		"@testing-library/react": "^13.4.0",
+		"@types/jest": "^29.2.2",
 		"typescript": "^4.8.4"
 	}
 }
