--- a/components/nds-tabs/package.json
+++ b/components/nds-tabs/package.json
@@ -41,6 +41,9 @@
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.5.0",
+		"@testing-library/jest-dom": "^5.16.5",
+		"@testing-library/react": "^13.4.0",
+		"@types/jest": "^29.2.2",
 		"typescript": "^4.8.4"
 	},
 	"gitHead": "b70a1e39df19c1943a000c841aca8d9bb3ef4ff1"
