--- a/package.json
+++ b/package.json
@@ -68,8 +68,11 @@
     "@nrwl/nx-cloud": "latest",
     "concurrently": "^7.5.0",
     "cross-env": "^7.0.3",
+    "identity-obj-proxy": "^3.0.0",
+    "jest-environment-jsdom": "^29.3.1",
     "lerna": "^6.0.1",
     "nx": "15.0.3",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.8.4"
   },
   "volta": {
