--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Monorepo for the NICE Design System",
   "scripts": {
     "start": "npm run dev",
-    "dev": "concurrently npm:build:ts:watch npm:docs:dev",
+    "dev": "tsc --build --clean && tsc --build && concurrently npm:build:ts:watch npm:docs:dev",
     "// ICONS": "",
     "icons": "lerna run --stream --scope=@nice-digital/icons",
     "icons:start": "npm run icons -- start",
