--- a/components/design-system/package.json
+++ b/components/design-system/package.json
@@ -79,6 +79,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.2.2",
+    "@types/node": "^18.11.9",
     "typescript": "^4.8.4"
   }
 }
