--- a/components/icons/package.json
+++ b/components/icons/package.json
@@ -60,6 +60,7 @@
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^14.4.3",
 		"@types/jest": "^29.2.2",
+		"@types/node": "^18.11.9",
 		"fantasticon": "^1.2.3",
 		"typescript": "^4.8.4"
 	}
