--- a/components/nds-stacked-nav/package.json
+++ b/components/nds-stacked-nav/package.json
@@ -11,8 +11,7 @@
 	"main": "es/StackedNav.js",
 	"style": "scss/stacked-nav.scss",
 	"directories": {
-		"lib": "lib",
-		"test": "__tests__"
+		"lib": "es"
 	},
 	"files": [
 		"es",
@@ -45,6 +44,7 @@
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^14.4.3",
 		"@types/jest": "^29.2.2",
+		"@types/node": "^18.11.9",
 		"typescript": "^4.8.4"
 	},
 	"gitHead": "b70a1e39df19c1943a000c841aca8d9bb3ef4ff1"
