--- a/docs/package.json
+++ b/docs/package.json
@@ -25,7 +25,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.2.2",
-    "@types/node": "18.11.7",
+    "@types/node": "^18.11.9",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
     "eslint": "8.26.0",
