--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@babel/preset-typescript": "^7.18.6",
     "@nrwl/nx-cloud": "latest",
     "@testing-library/jest-dom": "^5.16.5",
+    "@types/node": "^18.11.9",
     "concurrently": "^7.5.0",
     "cross-env": "^7.0.3",
     "identity-obj-proxy": "^3.0.0",
