NDS-337 Port Grid component to TS/RTL

--- a/components/nds-grid/package.json
+++ b/components/nds-grid/package.json
@@ -8,16 +8,13 @@
 	"author": "Ian Routledge <ian.routledge@nice.org.uk>",
 	"homepage": "https://design-system.nice.org.uk/",
 	"license": "MIT",
-	"main": "lib/Grid.js",
-	"module": "es/Grid.js",
+	"main": "es/Grid.js",
 	"style": "scss/grid.scss",
 	"types": "nds-grid.d.ts",
 	"directories": {
-		"lib": "lib",
-		"test": "__tests__"
+		"lib": "es"
 	},
 	"files": [
-		"lib",
 		"es",
 		"scss",
 		"*.d.ts"
@@ -38,8 +35,7 @@
 	},
 	"dependencies": {
 		"@nice-digital/nds-core": "^3.0.2",
-		"classnames": "^2.2.6",
-		"prop-types": "^15.7.2"
+		"classnames": "^2.2.6"
 	},
 	"peerDependencies": {
 		"react": "^16 || ^17 || ^18"
