--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
 		{ "path": "./components/nds-action-banner" },
 		{ "path": "./components/nds-breadcrumbs" },
 		{ "path": "./components/nds-button" },
+		{ "path": "./components/nds-container" },
 		{ "path": "./components/nds-grid" },
 		{ "path": "./components/nds-stacked-nav" }
 	]
