NDS-337 Port nds-hero to TS

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
 		{ "path": "./components/nds-button" },
 		{ "path": "./components/nds-container" },
 		{ "path": "./components/nds-grid" },
+		{ "path": "./components/nds-hero" },
 		{ "path": "./components/nds-stacked-nav" }
 	]
 }
