--- a/components/nds-action-banner/package.json
+++ b/components/nds-action-banner/package.json
@@ -32,8 +32,7 @@
 	"dependencies": {
 		"@nice-digital/icons": "^5.0.2",
 		"@nice-digital/nds-core": "^3.0.2",
-		"classnames": "^2.3.1",
-		"prop-types": "^15.7.2"
+		"classnames": "^2.3.1"
 	},
 	"peerDependencies": {
 		"react": "^16 || ^17 || ^18",
