--- a/components/nds-breadcrumbs/package.json
+++ b/components/nds-breadcrumbs/package.json
@@ -31,8 +31,7 @@
 	},
 	"dependencies": {
 		"@nice-digital/nds-core": "^3.0.2",
-		"classnames": "^2.3.1",
-		"prop-types": "^15.7.2"
+		"classnames": "^2.3.1"
 	},
 	"peerDependencies": {
 		"react": "^16 || ^17 || ^18",
