--- a/components/nds-hero/package.json
+++ b/components/nds-hero/package.json
@@ -8,16 +8,12 @@
 	"author": "Ian Routledge <ian.routledge@nice.org.uk>",
 	"homepage": "https://design-system.nice.org.uk/",
 	"license": "MIT",
-	"types": "nds-hero.d.ts",
-	"main": "lib/Hero.js",
-	"module": "es/Hero.js",
+	"main": "es/Hero.js",
 	"style": "scss/hero.scss",
 	"directories": {
-		"lib": "lib",
 		"test": "__tests__"
 	},
 	"files": [
-		"lib",
 		"es",
 		"scss",
 		"*.d.ts"
@@ -38,8 +34,7 @@
 	},
 	"dependencies": {
 		"@nice-digital/nds-core": "^3.0.2",
-		"classnames": "^2.3.1",
-		"prop-types": "^15.7.2"
+		"classnames": "^2.3.1"
 	},
 	"peerDependencies": {
 		"react": "^16 || ^17 || ^18",
