NDS-337 Port A-Z list to TS, add stub component pages

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
 	"files": [],
 	"exclude": ["node_modules"],
 	"references": [
+		{ "path": "./components/nds-a-z-list" },
 		{ "path": "./components/nds-action-banner" },
 		{ "path": "./components/nds-alert" },
 		{ "path": "./components/nds-breadcrumbs" },
