--- a/components/nds-a-z-list/package.json
+++ b/components/nds-a-z-list/package.json
@@ -2,12 +2,9 @@
   "name": "@nice-digital/nds-a-z-list",
   "version": "3.0.2",
   "description": "A to Z list component for the NICE Design System",
-  "main": "lib/AZList.js",
-  "module": "es/AZList.js",
+  "main": "es/AZList.js",
   "style": "scss/a-z-list.js",
-  "types": "nds-a-z-list.d.ts",
   "files": [
-    "lib",
     "es",
     "scss",
     "*.d.ts"
@@ -34,8 +31,7 @@
   "homepage": "https://design-system.nice.org.uk/",
   "license": "MIT",
   "dependencies": {
-    "@nice-digital/nds-core": "^3.0.2",
-    "prop-types": "^15.8.1"
+    "@nice-digital/nds-core": "^3.0.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
