--- a/components/nds-radio/package.json
+++ b/components/nds-radio/package.json
@@ -5,16 +5,12 @@
 	"author": "Warren Keith <warren.keith@nice.org.uk>",
 	"homepage": "https://github.com/nice-digital/nice-design-system#readme",
 	"license": "MIT",
-	"types": "nds-radio.d.ts",
-	"main": "lib/Radio.js",
-	"module": "es/Radio.js",
+	"main": "es/Radio.js",
 	"scss": "scss/radio.scss",
 	"directories": {
-		"lib": "lib",
-		"test": "__tests__"
+		"lib": "es"
 	},
 	"files": [
-		"lib",
 		"es",
 		"scss",
 		"*.d.ts"
@@ -41,8 +37,7 @@
 	},
 	"dependencies": {
 		"@nice-digital/nds-core": "^3.0.2",
-		"classnames": "^2.2.6",
-		"prop-types": "^15.7.2"
+		"classnames": "^2.2.6"
 	},
 	"peerDependencies": {
 		"react": "^16 || ^17 || ^18",
