--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
 		{ "path": "./components/nds-container" },
 		{ "path": "./components/nds-grid" },
 		{ "path": "./components/nds-hero" },
+		{ "path": "./components/nds-radio" },
 		{ "path": "./components/nds-stacked-nav" }
 	]
 }
