--- a/components/nds-enhanced-pagination/package.json
+++ b/components/nds-enhanced-pagination/package.json
@@ -8,16 +8,12 @@
 	],
 	"homepage": "https://github.com/nice-digital/nice-design-system#readme",
 	"license": "MIT",
-	"types": "nds-enhanced-pagination.d.ts",
-	"main": "lib/EnhancedPagination.js",
-	"module": "es/EnhancedPagination.js",
+	"main": "es/EnhancedPagination.js",
 	"style": "scss/enhanced-pagination.scss",
 	"directories": {
-		"lib": "lib",
-		"test": "__tests__"
+		"lib": "es"
 	},
 	"files": [
-		"lib",
 		"es",
 		"scss",
 		"*.d.ts"
@@ -38,8 +34,7 @@
 	},
 	"dependencies": {
 		"@nice-digital/nds-core": "^3.0.2",
-		"classnames": "^2.2.6",
-		"prop-types": "^15.7.2"
+		"classnames": "^2.2.6"
 	},
 	"peerDependencies": {
 		"react": "^16 || ^17 || ^18",
