--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,7 @@
 		{ "path": "./components/nds-horizontal-nav" },
 		{ "path": "./components/nds-input" },
 		{ "path": "./components/nds-maintain-ratio" },
+		{ "path": "./components/nds-page-header" },
 		{ "path": "./components/nds-radio" },
 		{ "path": "./components/nds-stacked-nav" },
 		{ "path": "./components/nds-textarea" }
